[package]
name = "banky"
version = "0.1.0"
authors = ["nilz3ro <austin.j.buddington@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.38"
rust_decimal = { version= "1.10.2", features = ["serde-str"] }